--- a/js/cssmenu/styles.css
+++ b/js/cssmenu/styles.css
@@ -61,6 +61,7 @@
 }
 #cssmenu > ul > li:hover > a {
   color: #ffffff;
+    text-decoration: underline;
 }
 #cssmenu > ul > li.has-sub > a {
   padding-right: 20px;
@@ -179,7 +180,7 @@
   left: 14px;
 }
 #cssmenu ul ul > li.has-sub:hover > a:before {
-  top: 17px;
+  top: px;
   height: 0;
 }
 @media all and (max-width: 768px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
@@ -195,7 +196,7 @@
   }
   #cssmenu ul li {
     width: 100%;
-    border-top: 1px solid rgba(120, 120, 120, 0.2);
+    border-top: 2px solid rgba(120, 120, 120, 0.2);
   }
   #cssmenu ul ul li,
   #cssmenu li:hover > ul > li {
@@ -222,6 +223,7 @@
   #cssmenu ul ul li:hover > a,
   #cssmenu ul ul li.active > a {
     color: #ffffff;
+      text-decoration: underline;
   }
   #cssmenu ul ul,
   #cssmenu ul ul ul,
@@ -243,13 +245,13 @@
     padding: 17px;
     color: #dddddd;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 14px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: bold;
   }
   #cssmenu #menu-button:after {
     position: absolute;
-    top: 22px;
+    top: 29px;
     right: 17px;
     display: block;
     height: 4px;
@@ -263,7 +265,7 @@
     top: 16px;
     right: 17px;
     display: block;
-    height: 2px;
+    height: 4px;
     width: 20px;
     background: #dddddd;
     content: '';
@@ -271,7 +273,7 @@
   #cssmenu #menu-button.menu-opened:after {
     top: 23px;
     border: 0;
-    height: 2px;
+    height: 4px;
     width: 15px;
     background: #ffffff;
     -webkit-transform: rotate(45deg);
