--- a/js/cssmenu/styles.css
+++ b/js/cssmenu/styles.css
@@ -129,9 +129,9 @@
   margin-right: 100%;
 }
 #cssmenu ul ul li a {
-  border-bottom: 1px solid rgba(150, 150, 150, 0.15);
+  border-bottom: 4px solid rgba(150, 150, 150, 0.15);
   padding: 11px 15px;
-  width: 170px;
+  width: 400px;
   font-size: 12px;
   text-decoration: none;
   color: #dddddd;
@@ -145,6 +145,7 @@
 #cssmenu ul ul li:hover > a,
 #cssmenu ul ul li a:hover {
   color: #ffffff;
+    text-decoration: underline;
 }
 #cssmenu ul ul li.has-sub > a:after {
   position: absolute;
