--- a/css/app.css
+++ b/css/app.css
@@ -14,9 +14,11 @@
     float: left;
     margin-top: 20px;
 }
-.imagem img{
 
+.imagem-camiseta{
+    margin-top: 2em;
 }
+
 .novoh1 h1{
     font-size: 22px;
     color: #069;
@@ -407,7 +409,7 @@
 
 .topo-h3{
     padding: 0.5em;
-    margin-top: 0.5em;
+    margin-top: 0.3em;
 }
 
 .topo-h3 h3{
