--- a/css/app.css
+++ b/css/app.css
@@ -605,3 +605,11 @@
     background-color:#66CCFF;
     z-index: 9;
 }
+.white-popup {
+    position: relative;
+    background: #FFF;
+    padding: 20px;
+    width: auto;
+    max-width: 500px;
+    margin: 20px auto;
+}
