commit formulario de agenda

--- a/components/app.css
+++ b/components/app.css
@@ -1,7 +1,6 @@
 form {
     margin: 0 auto;
-    max-width: 850px;
-    padding: 10px 10px;
+    /*max-width: 850px;*/
     background-color: rgba(158, 168, 189, 0.4);
 }
 
