--- a/components/app.css
+++ b/components/app.css
@@ -2,6 +2,7 @@ form {
     margin: 0 auto;
     /*max-width: 850px;*/
     background-color: rgba(158, 168, 189, 0.4);
+    padding: 20px;
 }
 
 .labelade label{
